feat: Add bubble menu

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"type": "module",
 	"dependencies": {
 		"@tiptap/core": "^2.1.16",
+		"@tiptap/extension-bubble-menu": "^2.1.16",
 		"@tiptap/pm": "^2.1.16",
 		"@tiptap/starter-kit": "^2.1.16"
 	}
