--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@tiptap/core": "^2.1.16",
 		"@tiptap/extension-bubble-menu": "^2.1.16",
 		"@tiptap/pm": "^2.1.16",
-		"@tiptap/starter-kit": "^2.1.16"
+		"@tiptap/starter-kit": "^2.1.16",
+		"html2pdf.js": "^0.10.1"
 	}
 }
