--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"clsx": "^2.1.0",
 		"html2pdf.js": "^0.10.1",
 		"lucide-svelte": "^0.314.0",
+		"mode-watcher": "^0.1.2",
 		"tailwind-merge": "^2.2.0",
 		"tailwind-variants": "^0.1.20"
 	}
