--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "Note",
   "start_url": "/note2/",
   "display": "standalone",
-  "theme_color": "#ffffff",
-  "background_color": "#000000",
+  "theme_color": "hsl(222.2 84% 4.9%)",
+  "background_color": "hsl(222.2 84% 4.9%)",
   "icons": [
     {
       "sizes": "192x192",
