--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@tiptap/extension-bubble-menu": "^2.1.16",
 		"@tiptap/extension-image": "^2.1.16",
 		"@tiptap/extension-link": "^2.1.16",
+		"@tiptap/extension-placeholder": "^2.1.16",
 		"@tiptap/extension-text-align": "^2.1.16",
 		"@tiptap/pm": "^2.1.16",
 		"@tiptap/starter-kit": "^2.1.16",
