--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "LightNote",
   "short_name": "LightNote",
-  "start_url": "/note2/",
+  "start_url": "/LightNote/",
   "display": "standalone",
   "theme_color": "hsl(240 10% 3.9%)",
   "background_color": "hsl(240 10% 3.9%)",
