--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@tiptap/extension-link": "^2.1.16",
 		"@tiptap/extension-placeholder": "^2.1.16",
 		"@tiptap/extension-text-align": "^2.1.16",
+		"@tiptap/extension-underline": "^2.5.4",
 		"@tiptap/extension-youtube": "^2.5.4",
 		"@tiptap/pm": "^2.1.16",
 		"@tiptap/starter-kit": "^2.1.16",
