--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
+		"vite-plugin-devtools-json": "^0.1.0",
 		"vitest": "^1.2.0"
 	},
 	"type": "module",
